Update README and replace example notebook with new usage examples

--- a/explicit_util_examples.ipynb
+++ b/explicit_util_examples.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "import explicit_util.whisper_cpp_transcribe as whisper_cpp_transcribe\n",
+    "from explicit_util import whisper_cpp_transcribe\n",
     "video_folder = Path(r\"D:\\your\\video\\folder\")\n",
     "whisper_cpp_root = Path(r\"E:\\your\\whisper.cpp\")\n",
     "whisper_cpp_transcribe.process_videos(video_folder,whisper_cpp_root, suffix='.mp4')"
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import explicit_util.convert_heic_to_webp as convert_heic_to_webp\n",
+    "from explicit_util import convert_heic_to_webp\n",
     "\n",
     "folder_to_process = r\"D:\\your\\pictures\\folder\"\n",
     "convert_heic_to_webp.convert_heic_to_webp_multithreaded(folder_to_process, 4, 4)"
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import explicit_util.recursive_namer as recursive_namer\n",
+    "from explicit_util import recursive_namer\n",
     "\n",
     "ROOT_DIR = Path(r\"D:\\your\\video\\folder\")\n",
     "NAMER_CONFIG = \".namer.cfg\"\n",
@@ -73,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import zip_and_move\n",
+    "from explicit_util import zip_and_move\n",
     "from pathlib import Path\n",
     "\n",
     "source_folder = Path(r\"D:\\your\\pictures\\folder\")\n",
@@ -95,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import explicit_util.recursive_unzip as recursive_unzip\n",
+    "from explicit_util import recursive_unzip\n",
     "from pathlib import Path\n",
     "\n",
     "source_folder = Path(r\"D:\\your\\pictures\")\n",
