Update example notebook to generalize conversion title

--- a/explicit_util_examples.ipynb
+++ b/explicit_util_examples.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Convert heic to webp"
+    "# Convert to webp"
    ]
   },
   {
