Enhance README and update conversion functions to support various picture formats, including metadata generation

--- a/explicit_util_examples.ipynb
+++ b/explicit_util_examples.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Transcribe the video and generate subtitle file"
+    "# Transcribe the video and generate subtitle file\n"
    ]
   },
   {
@@ -15,16 +15,17 @@
    "source": [
     "from pathlib import Path\n",
     "from explicit_util import whisper_cpp_transcribe\n",
+    "\n",
     "video_folder = Path(r\"D:\\your\\video\\folder\")\n",
     "whisper_cpp_root = Path(r\"E:\\your\\whisper.cpp\")\n",
-    "whisper_cpp_transcribe.process_videos(video_folder,whisper_cpp_root, suffix='.mp4')"
+    "whisper_cpp_transcribe.process_videos(video_folder, whisper_cpp_root, suffix=\".mp4\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Convert to webp"
+    "# Convert to webp\n"
    ]
   },
   {
@@ -33,17 +34,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from explicit_util import convert_heic_to_webp\n",
+    "from explicit_util import convert_pic_to_webp\n",
     "\n",
     "folder_to_process = r\"D:\\your\\pictures\\folder\"\n",
-    "convert_heic_to_webp.convert_heic_to_webp_multithreaded(folder_to_process, 4, 4)"
+    "convert_pic_to_webp.convert_heic_to_webp_multithreaded(folder_to_process, 4, 4)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Use namer to rename clips"
+    "# Use namer to rename clips\n"
    ]
   },
   {
@@ -57,14 +58,16 @@
     "ROOT_DIR = Path(r\"D:\\your\\video\\folder\")\n",
     "NAMER_CONFIG = \".namer.cfg\"\n",
     "\n",
-    "recursive_namer.process_video_files(ROOT_DIR, NAMER_CONFIG, suffix=(\".m4v\", \".mp4\"),endswith=(\"h265\",\"subtitled\"))"
+    "recursive_namer.process_video_files(\n",
+    "    ROOT_DIR, NAMER_CONFIG, suffix=(\".m4v\", \".mp4\"), endswith=(\"h265\", \"subtitled\")\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Zip and move the archive to backup location"
+    "# Zip and move the archive to backup location\n"
    ]
   },
   {
@@ -86,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Recursive unzip"
+    "# Recursive unzip\n"
    ]
   },
   {
@@ -100,7 +103,31 @@
     "\n",
     "source_folder = Path(r\"D:\\your\\pictures\")\n",
     "\n",
-    "recursive_unzip.recursive_unzip(source_folder, delete_zips = False)"
+    "recursive_unzip.recursive_unzip(source_folder, delete_zips=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generate .nfo files and add metadata entry recursively\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from explicit_util.explicit_util import nfo_tool\n",
+    "\n",
+    "media_folder = r\"D:\\your\\video\\folder\"  # Replace with your media folder\n",
+    "nfo_output_folder = media_folder\n",
+    "\n",
+    "nfo_tool.generate_nfo(media_folder, \"movie\", nfo_output_folder)\n",
+    "nfo_tool.batch_add_attribute(nfo_output_folder, \"studio\", \"studio_name\")\n",
+    "nfo_tool.batch_add_attribute(nfo_output_folder, \"genre\", \"genre_name\")\n",
+    "nfo_tool.batch_add_attribute(nfo_output_folder, \"actor\", \"actor_name\", role=\"role_name\")"
    ]
   }
  ],
