Refactor function signatures to accept Path or string types; update README for improved usage instructions and installation steps; enhance setup.py with new dependencies.

--- a/explicit_util_examples.ipynb
+++ b/explicit_util_examples.ipynb
@@ -13,12 +13,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "from explicit_util import whisper_cpp_transcribe\n",
+    "import explicit_util.whisper_cpp_transcribe as whisper_cpp_transcribe\n",
     "\n",
-    "video_folder = Path(r\"D:\\your\\video\\folder\")\n",
-    "whisper_cpp_root = Path(r\"E:\\your\\whisper.cpp\")\n",
-    "whisper_cpp_transcribe.process_videos(video_folder, whisper_cpp_root, suffix=\".mp4\")"
+    "video_folder = r\"D:\\your\\video\\folder\"\n",
+    "whisper_cpp_root = r\"E:\\your\\whisper.cpp\"\n",
+    "whisper_cpp_transcribe.run_batch_transcribe(video_folder, whisper_cpp_root, suffix=('.mp4',))\n",
+    "\n",
+    "# Alternatively, you can use the following command in the terminal:\n",
+    "# python -m explicit_util.whisper_cpp_transcribe"
    ]
   },
   {
@@ -34,10 +36,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from explicit_util import convert_pic_to_webp\n",
+    "from explicit_util.convert_pic_to_webp import convert_pic_to_webp_multithreaded\n",
     "\n",
     "folder_to_process = r\"D:\\your\\pictures\\folder\"\n",
-    "convert_pic_to_webp.convert_heic_to_webp_multithreaded(folder_to_process, 4, 4)"
+    "convert_pic_to_webp_multithreaded(folder_to_process, 4, 4)"
    ]
   },
   {
@@ -53,12 +55,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from explicit_util import recursive_namer\n",
     "\n",
-    "ROOT_DIR = Path(r\"D:\\your\\video\\folder\")\n",
+    "from explicit_util.recursive_namer import process_video_files\n",
+    "\n",
+    "ROOT_DIR = r\"D:\\your\\video\\folder\"\n",
     "NAMER_CONFIG = \".namer.cfg\"\n",
     "\n",
-    "recursive_namer.process_video_files(\n",
+    "process_video_files(\n",
     "    ROOT_DIR, NAMER_CONFIG, suffix=(\".m4v\", \".mp4\"), endswith=(\"h265\", \"subtitled\")\n",
     ")"
    ]
@@ -76,13 +79,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from explicit_util import zip_and_move\n",
-    "from pathlib import Path\n",
+    "from explicit_util.zip_and_move import zip_and_move\n",
     "\n",
-    "source_folder = Path(r\"D:\\your\\pictures\\folder\")\n",
-    "destination_folder = Path(r\"E:\\your\\archives\\folder\")\n",
+    "source_folder = r\"D:\\your\\pictures\\folder\"\n",
+    "destination_folder = r\"E:\\your\\archives\\folder\"\n",
     "\n",
-    "zip_and_move.zip_and_move(source_folder, destination_folder)"
+    "zip_and_move(source_folder, destination_folder)"
    ]
   },
   {
@@ -98,12 +100,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from explicit_util import recursive_unzip\n",
-    "from pathlib import Path\n",
+    "from explicit_util.recursive_unzip import recursive_unzip\n",
     "\n",
-    "source_folder = Path(r\"D:\\your\\pictures\")\n",
     "\n",
-    "recursive_unzip.recursive_unzip(source_folder, delete_zips=False)"
+    "source_folder = r\"D:\\your\\pictures\"\n",
+    "\n",
+    "recursive_unzip(source_folder, delete_zips=False)"
    ]
   },
   {
@@ -119,15 +121,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from explicit_util.explicit_util import nfo_tool\n",
+    "from explicit_util.nfo_tool import generate_nfo, batch_add_attribute\n",
     "\n",
     "media_folder = r\"D:\\your\\video\\folder\"  # Replace with your media folder\n",
     "nfo_output_folder = media_folder\n",
     "\n",
-    "nfo_tool.generate_nfo(media_folder, \"movie\", nfo_output_folder)\n",
-    "nfo_tool.batch_add_attribute(nfo_output_folder, \"studio\", \"studio_name\")\n",
-    "nfo_tool.batch_add_attribute(nfo_output_folder, \"genre\", \"genre_name\")\n",
-    "nfo_tool.batch_add_attribute(nfo_output_folder, \"actor\", \"actor_name\", role=\"role_name\")"
+    "generate_nfo(media_folder, \"movie\", nfo_output_folder)\n",
+    "batch_add_attribute(nfo_output_folder, \"studio\", \"studio_name\")\n",
+    "batch_add_attribute(nfo_output_folder, \"genre\", \"genre_name\")\n",
+    "batch_add_attribute(nfo_output_folder, \"actor\", \"actor_name\", role=\"role_name\")"
    ]
   }
  ],
