Implement async processing for zipping and moving directories; update examples to demonstrate usage.

--- a/explicit_util_examples.ipynb
+++ b/explicit_util_examples.ipynb
@@ -88,6 +88,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Alternatively, you can run the following code to utilize async processing:\n",
+    "import asyncio\n",
+    "import nest_asyncio\n",
+    "from explicit_util.zip_and_move import async_zip_and_move\n",
+    "\n",
+    "source_folder = r\"D:\\your\\pictures\\folder\"\n",
+    "destination_folder = r\"E:\\your\\archives\\folder\"\n",
+    "\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "await async_zip_and_move(source_folder, destination_folder)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
