Enhance async processing functions with detailed docstrings; update examples to clarify usage and performance benefits.

--- a/explicit_util_examples.ipynb
+++ b/explicit_util_examples.ipynb
@@ -93,7 +93,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Alternatively, you can run the following code to utilize async processing:\n",
+    "# Alternatively, you can run the following code to utilize async processing\n",
+    "# Asynchronous processing is faster for IO bound tasks\n",
+    "# This requires larger free space on the source drive (larger than the size of the source folder)\n",
     "import asyncio\n",
     "import nest_asyncio\n",
     "from explicit_util.zip_and_move import async_zip_and_move\n",
