Update explicit_util_examples.ipynb with usage notes for convert_pic_to_webp_multithreaded and correct Python version

--- a/explicit_util_examples.ipynb
+++ b/explicit_util_examples.ipynb
@@ -39,7 +39,11 @@
     "from explicit_util.convert_pic_to_webp import convert_pic_to_webp_multithreaded\n",
     "\n",
     "folder_to_process = r\"D:\\your\\pictures\\folder\"\n",
-    "convert_pic_to_webp_multithreaded(folder_to_process, 4, 4)"
+    "convert_pic_to_webp_multithreaded(folder_to_process, 4, 4)\n",
+    "\n",
+    "# Multiprocessing doesn't work well in Jupyter Notebook, so it's better to run this in a script.\n",
+    "# Alternatively, you can use the following command in the terminal:\n",
+    "# python -m explicit_util.convert_pic_to_webp"
    ]
   },
   {
@@ -170,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
