Add utility scripts for media processing and management
- Implemented `convert_pic_to_webp.py` for converting images to WebP format using ImageMagick with multithreading support.
- Created `nfo_tool.py` to generate and update .nfo files for various media types, including movies, episodes, and music videos.
- Developed `recursive_namer.py` to recursively rename video files based on a configuration file using PowerShell commands.
- Added `recursive_unzip.py` for unzipping ZIP archives in a directory and its subdirectories.
- Introduced `remove_empty.py` to recursively remove empty directories with logging support.
- Created `whisper_cpp_transcribe.py` for extracting audio from video files and transcribing it using Whisper.
- Implemented `zip_and_move.py` to zip leaf directories and move them to a specified destination, including checksum verification.

--- a/explicit_util_examples.ipynb
+++ b/explicit_util_examples.ipynb
@@ -13,11 +13,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import explicit_util.whisper_cpp_transcribe as whisper_cpp_transcribe\n",
-    "\n",
+    "from ExplicitUtil.whisper_cpp_transcribe import run_batch_transcribe\n",
     "video_folder = r\"D:\\your\\video\\folder\"\n",
     "whisper_cpp_root = r\"E:\\your\\whisper.cpp\"\n",
-    "whisper_cpp_transcribe.run_batch_transcribe(video_folder, whisper_cpp_root, suffix=('.mp4',))\n",
+    "run_batch_transcribe(video_folder, whisper_cpp_root, suffix=('.mp4',))\n",
     "\n",
     "# Alternatively, you can use the following command in the terminal:\n",
     "# python -m explicit_util.whisper_cpp_transcribe"
@@ -36,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from explicit_util.convert_pic_to_webp import convert_pic_to_webp_multithreaded\n",
+    "from ExplicitUtil.convert_pic_to_webp import convert_pic_to_webp_multithreaded\n",
     "\n",
     "folder_to_process = r\"D:\\your\\pictures\\folder\"\n",
     "convert_pic_to_webp_multithreaded(folder_to_process, 4, 4)\n",
@@ -60,7 +59,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "from explicit_util.recursive_namer import process_video_files\n",
+    "from ExplicitUtil.recursive_namer import process_video_files\n",
     "\n",
     "ROOT_DIR = r\"D:\\your\\video\\folder\"\n",
     "NAMER_CONFIG = \".namer.cfg\"\n",
@@ -83,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from explicit_util.zip_and_move import zip_and_move\n",
+    "from ExplicitUtil.zip_and_move import zip_and_move\n",
     "\n",
     "source_folder = r\"D:\\your\\pictures\\folder\"\n",
     "destination_folder = r\"E:\\your\\archives\\folder\"\n",
@@ -102,7 +101,7 @@
     "# This requires larger free space on the source drive (larger than the size of the source folder)\n",
     "import asyncio\n",
     "import nest_asyncio\n",
-    "from explicit_util.zip_and_move import async_zip_and_move\n",
+    "from ExplicitUtil.zip_and_move import async_zip_and_move\n",
     "\n",
     "source_folder = r\"D:\\your\\pictures\\folder\"\n",
     "destination_folder = r\"E:\\your\\archives\\folder\"\n",
@@ -125,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from explicit_util.recursive_unzip import recursive_unzip\n",
+    "from ExplicitUtil.recursive_unzip import recursive_unzip\n",
     "\n",
     "\n",
     "source_folder = r\"D:\\your\\pictures\"\n",
@@ -146,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from explicit_util.nfo_tool import generate_nfo, batch_add_attribute\n",
+    "from ExplicitUtil.nfo_tool import generate_nfo, batch_add_attribute\n",
     "\n",
     "media_folder = r\"D:\\your\\video\\folder\"  # Replace with your media folder\n",
     "nfo_output_folder = media_folder\n",
