Update ExplicitUtil CLI and configuration files; refactor transcribe functions, add new whisper command config, and adjust default settings

--- a/explicit_util_examples.ipynb
+++ b/explicit_util_examples.ipynb
@@ -13,10 +13,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ExplicitUtil.whisper_cpp_transcribe import run_batch_transcribe\n",
+    "from ExplicitUtil.whisper_cpp_transcribe import transcribe_videos\n",
     "video_folder = r\"D:\\your\\video\\folder\"\n",
     "whisper_cpp_root = r\"E:\\your\\whisper.cpp\"\n",
-    "run_batch_transcribe(video_folder, whisper_cpp_root, suffix=('.mp4',))\n",
+    "transcribe_videos(video_folder, whisper_cpp_root, suffix=('.mp4',))\n",
     "\n",
     "# Alternatively, you can use the following command in the terminal:\n",
     "# python -m explicit_util.whisper_cpp_transcribe"
@@ -58,14 +58,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "from ExplicitUtil.recursive_namer import process_video_files\n",
     "\n",
     "ROOT_DIR = r\"D:\\your\\video\\folder\"\n",
     "NAMER_CONFIG = \".namer.cfg\"\n",
     "\n",
     "process_video_files(\n",
-    "    ROOT_DIR, NAMER_CONFIG, suffix=(\".m4v\", \".mp4\"), endswith=(\"h265\", \"subtitled\")\n",
+    "    ROOT_DIR, NAMER_CONFIG, suffix=(\".m4v\", \".mp4\"), endswith=\"subtitled\"\n",
     ")"
    ]
   },
